syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";
import "HouseholdExpenses.proto";
import "HouseholdData.proto";

message CreateHouseholdRequest {
    int32 SalesArrangementId = 1;
    
    int32 HouseholdTypeId = 2;
    
    google.protobuf.Int32Value CustomerOnSAId1 = 3;
    
    google.protobuf.Int32Value CustomerOnSAId2 = 4;
        
    DomainServices.SalesArrangementService.HouseholdData Data = 5;
    
    DomainServices.SalesArrangementService.Expenses Expenses = 6;
}

message CreateHouseholdResponse {
    int32 HouseholdId = 1;
}