syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "Household.proto";

message GetHouseholdListRequest {
    int32 SalesArrangementId = 1;
}

message GetHouseholdListResponse {
    repeated DomainServices.SalesArrangementService.Household Households = 1;
}