syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

message HouseholdIdRequest {
    int32 HouseholdId = 1;
}